Fixed DOCTYPE and content declarations for HTML5 and to avoid quirks mode on IE.

--- a/web/static/login.html
+++ b/web/static/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 //Copyright 2012 Cloud Sidekick
 // 
@@ -14,9 +15,9 @@
 //limitations under the License.
 //
 -->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
     <head>
+        <meta charset=utf-8 />
         <title>Cato - Cloud Sidekick</title>
         <link type="text/css" href="style/login.css" rel="stylesheet" />
         <link type="text/css" href="style/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
