Maestro backport - cosmetic ui fixes

--- a/ui/admin/static/pages/file_upload.html
+++ b/ui/admin/static/pages/file_upload.html
@@ -118,7 +118,7 @@
                         </div>
                     </td>
                     <td>
-                        <input type="submit" class="ui-widget ui-state-default ui-corner-all ui-button-text-only" style="margin-top: -10px; font-weight: normal; font-size: 10pt;" ID="btnImport" value="Load" />
+                        <input type="submit" class="ui-widget ui-state-default ui-corner-all ui-button-text-only" style="margin-bottom: 10px; font-weight: normal; font-size: 10pt;" ID="btnImport" value="Load" />
                     </td>
                 </tr>
             </table>
