Login page link to license file.  License 'agree' now app specific.

--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -59,6 +59,7 @@
                                 <a id="forgot_password_btn" class="pointer">Forgot password? <img src="images/icons/password.png" alt="" style="vertical-align: middle;" /> </a>
                             </div>
                         </div>
+                        <div style="font-weight: normal; font-size: 0.9em; margin-top: 10px; text-align: center;">By using Cato, you agree to the <a style="color: #FFFFFF;" target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Terms and Conditions</a>.</div>
                     </div>
                 </div>
                 <div id="loginerror" class="loginerror">
