--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -60,6 +60,7 @@
                             </div>
                         </div>
                         <div style="font-weight: normal; font-size: 0.9em; margin-top: 10px; text-align: center;">By using Cato, you agree to the <a style="color: #FFFFFF;" target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Terms and Conditions</a>.</div>
+                        <div id="app_version" style="font-weight: normal; font-size: 0.9em; margin-top: 10px; text-align: center;"></div>
                     </div>
                 </div>
                 <div id="loginerror" class="loginerror">
