Login page updates.

--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="script/login.js"></script>
     </head>
     <body>
+        <img id="csklogo" src="images/csk-logo.png" />
         <div id="wrapper">
             <div>
                 <img alt="" src="images/login-logo.png" />
