--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -22,11 +22,11 @@
         <link type="text/css" href="style/login.css" rel="stylesheet" />
         <link type="text/css" href="style/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
         <link rel="icon" href="images/favicon.ico" />
-        <script type="text/javascript" src="script/jquery/jquery-1.7.2.min.js"></script>
-        <script type="text/javascript" src="script/jquery/jquery-ui-1.8.21.min.js"></script>
-        <script type="text/javascript" src="script/jquery/jquery.base64.js"></script>
-        <script type="text/javascript" src="script/MainScript.js"></script>
-        <script type="text/javascript" src="script/login.js"></script>
+        <script src="script/jquery/jquery-1.7.2.min.js"></script>
+        <script src="script/jquery/jquery-ui-1.8.21.min.js"></script>
+        <script src="script/jquery/jquery.base64.js"></script>
+        <script src="script/MainScript.js"></script>
+        <script src="script/login.js"></script>
     </head>
     <body>
         <img id="csklogo" src="images/csk-logo.png" />
