--- a/ui/admin/static/pages/file_upload.html
+++ b/ui/admin/static/pages/file_upload.html
@@ -17,9 +17,9 @@
 -->
 <html>
     <head>
-        <script type="text/javascript" src="../script/jquery/jquery-1.7.2.min.js"></script>
-        <script type="text/javascript" src="../script/jquery/jquery-ui-1.8.21.min.js"></script>
-        <script type="text/javascript" src="../script/MainScript.js"></script>
+        <script src="../script/jquery/jquery-1.7.2.min.js"></script>
+        <script src="../script/jquery/jquery-ui-1.8.21.min.js"></script>
+        <script src="../script/MainScript.js"></script>
         <link rel="stylesheet" type="text/css" href="../style/jquery-ui-1.8.21.custom.css" />       
         <style type="text/css">
         <!--
