login now properly uses a POST

--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -39,7 +39,7 @@
                     <div id="loginbox">
                         <span id="lblMessage"></span>
                         <div id="pnlLogin">
-                            <form id="login_form" method="get" action="/home">
+                            <form id="login_form" method="post" action="/home">
                                 <table style="width: 100%;">
                                     <tr>
                                         <td> Username: </td>
