--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -24,7 +24,7 @@
         <link rel="icon" href="images/favicon.ico" />
         <script src="/common/js/jquery/jquery-1.10.2.min.js"></script>
         <script src="/common/js/jquery/jquery-ui-1.10.3.min.js"></script>
-        <script src="script/jquery/jquery.base64.js"></script>
+        <script src="/common/js/jquery/jquery.base64.js"></script>
         <script src="script/MainScript.js"></script>
         <script src="script/login.js"></script>
     </head>
