new logo on login page

--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -29,14 +29,14 @@
         <script src="script/login.js"></script>
     </head>
     <body>
-        <div id="csklogo" class="floatleft pointer" onclick="location.href='/';">
-            <span style="font-family: MuseoSlab-Light;">cloud</span><b>sidekick</b>
-        </div>
         <div id="wrapper">
-            <div>
+            <div id="loginlogo">
                 <img alt="" src="images/login-logo.png" />
             </div>
             <div id="container">
+                <div id="csklogo" class="floatleft pointer" onclick="location.href='/';">
+                    <span style="font-family: MuseoSlab-Light;">cloud</span><b>sidekick</b>
+                </div>
                 <div id="loginpanel">
                     <div id="loginbox">
                         <span id="lblMessage"></span>
@@ -61,7 +61,7 @@
                                 </table>
                             </form>
                             <div>
-                                <a id="forgot_password_btn" class="pointer">Forgot password? <img src="images/icons/password.png" alt="" style="vertical-align: middle;" /> </a>
+                                <a id="forgot_password_btn" class="pointer">Forgot password? <img src="/common/img/icons/password.png" alt="" style="vertical-align: middle;" /> </a>
                             </div>
                         </div>
                     </div>
