Closes #321 - javascript consolidation and organization

--- a/ui/admin/static/pages/file_upload.html
+++ b/ui/admin/static/pages/file_upload.html
@@ -19,7 +19,7 @@
     <head>
         <script src="/cache/js/jquery/jquery-1.10.2.min.js"></script>
         <script src="/cache/js/jquery/jquery-ui-1.10.3.min.js"></script>
-        <script src="../script/MainScript.js"></script>
+        <script src="/common/js/url.js"></script>
         <link rel="stylesheet" type="text/css" href="/common/css/jquery-ui-1.10.4.custom.css" />       
         <style type="text/css">
         <!--
