--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -25,7 +25,8 @@
         <script src="/cache/js/jquery/jquery-1.10.2.min.js"></script>
         <script src="/cache/js/jquery/jquery-ui-1.10.3.min.js"></script>
         <script src="/cache/js/jquery/jquery.base64.js"></script>
-        <script src="script/MainScript.js"></script>
+        <script src="/common/js/url.js"></script>
+        <script src="/common/js/alert.js"></script>
         <script src="script/login.js"></script>
     </head>
     <body>
