fixed a new bug in the login page.

--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -27,6 +27,7 @@
         <script src="/cache/js/jquery/jquery.base64.js"></script>
         <script src="/common/js/url.js"></script>
         <script src="/common/js/alert.js"></script>
+        <script src="/common/js/ajaxcore.js"></script>
         <script src="script/login.js"></script>
     </head>
     <body>
