--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -22,9 +22,9 @@
         <link type="text/css" href="style/login.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/jquery-ui-1.10.4.custom.css" rel="stylesheet" />
         <link rel="icon" href="images/favicon.ico" />
-        <script src="/cache/js/jquery/jquery-1.10.2.min.js"></script>
-        <script src="/cache/js/jquery/jquery-ui-1.10.3.min.js"></script>
-        <script src="/cache/js/jquery/jquery.base64.js"></script>
+        <script src="/common/vendor/js/jquery/jquery-1.10.2.min.js"></script>
+        <script src="/common/vendor/js/jquery/jquery-ui-1.10.3.min.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.base64.js"></script>
         <script src="/common/js/url.js"></script>
         <script src="/common/js/alert.js"></script>
         <script src="/common/js/ajaxcore.js"></script>
