app title changed

--- a/ui/admin/static/login.html
+++ b/ui/admin/static/login.html
@@ -18,7 +18,7 @@
 <html>
     <head>
         <meta charset=utf-8 />
-        <title>Cato - Cloud Sidekick</title>
+        <title>veloAutomate</title>
         <link type="text/css" href="style/login.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/jquery-ui-1.10.4.custom.css" rel="stylesheet" />
         <link rel="icon" href="images/favicon.ico" />
@@ -33,7 +33,7 @@
     <body>
         <div id="wrapper">
             <div id="loginlogo">
-                <img alt="" src="images/login-logo.png" />
+                velo<span style="color: #850C70;"><b>Automate</b></span>
             </div>
             <div id="container">
                 <div id="csklogo" class="floatleft pointer" onclick="location.href='/';">
