new ui - ceased using web.py templator due to rigidity

--- a/ui/cskui/static/_header.html
+++ b/ui/cskui/static/_header.html
@@ -1,3 +1,4 @@
+<!-- CSKUI -->
 <ul class="inline-list">
     <li>
         <span id="flow_link"><b>flow</b></span>
@@ -12,3 +13,4 @@
         <span id="canvas_link"><b>canvas</b></span>
     </li>
 </ul>
+<!-- CSKUI -->
